course/project/image-service/manifests/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: image-service
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-service
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-rate
      - pause:
          duration: 10m
      - setWeight: 50
  template:
    metadata:
      labels:
        app: image-service
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: image-service
          image: juslesan/todo-image
          volumeMounts:
          - name: shared-files
            mountPath: /usr/src/app/files
