course/project/image-service/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: image-service
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3012
